[package]
name = "jasmine"
version = "0.1.1"
edition = "2021"
description = "Jasmine is a scalable cache with clock replacement policy. The cache size and grow and shrink on demand."
keywords = ["cache", "clock-cache", "concurrent"]
repository = "https://github.com/XiangpengHao/jasmine"
readme = "README.md"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version =  "0.2.126", optional = true }
spin = "0.9.3"

[dev-dependencies]
shuttle = "0.1.0"
crossbeam = "0.8.1"
static_assertions = "1.1.0"

[features]
shuttle = []
mmap = ["libc"]
