[package]
name = "jasmine-db"
version = "0.1.1"
edition = "2021"
description = "Jasmine is a scalable cache with clock replacement policy. The cache size and grow and shrink on demand."
keywords = ["cache", "clock-cache", "concurrent"]
repository = "https://github.com/XiangpengHao/jasmine"
readme = "README.md"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanorand = "0.7.0"
rand = "0.8.5"
spin = "0.9.4"
douhua = { git = "https://github.com/XiangpengHao/douhua.git", branch = "numa" }
shuttle = { version = "0.2.0", optional = true }

[dev-dependencies]
crossbeam = "0.8.2"
static_assertions = "1.1.0"

[features]
shuttle = ["dep:shuttle"]
mock_numa = ["douhua/mock_numa"]
